fix: Chaged ridiculously high Z-index value of caret div

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -270,7 +270,7 @@ pre[class*="language-"]::selection {
   top: 0;
   left: 25px;
   right: 0;
-  width: 90%;
+  width: 100%;
   height: 100%;
   padding: 1rem;
   border: none;
@@ -380,7 +380,7 @@ textarea {
   position: absolute;
   width: 200px;
   min-height: 80px;
-  z-index: 99999999999999999999999;
+  z-index: 99999999;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
